--- a/css/root.css
+++ b/css/root.css
@@ -15,6 +15,10 @@ body {
 
     max-width: 600px;
 
+    background-image: url("../assets/yota.png");
+    background-repeat: repeat;
+    background-size: 100px; /* Adjust this size as needed */
+
     font-family: "MS Gothic", "ＭＳ ゴシック", monospace;
     font-size: 16px;
     font-weight: normal;
@@ -85,6 +89,9 @@ div.main {
     flex-grow: 1;
 
     margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 8px;
 }
 
 a {
@@ -105,4 +112,11 @@ a:hover {
 ul {
     list-style-type: disc;
     margin: 0;
+}
+
+.logo-container,
+.navbar {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+    border-radius: 8px;
 }
